Implement overlay node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ add_executable(vr src/main.cpp src/render.cpp src/ricohStream.cpp src/hmdHandler
 									src/lodepng.cpp
 									src/pathtools.cpp
 									src/strtools.cpp)
+add_executable(overlay src/rvizOverlay.cpp)
 
 include_directories(C:/Users/Dyros/Desktop/avatar/src/VR/include)
 include_directories(${catkin_INCLUDE_DIRS})
@@ -86,4 +87,9 @@ C:/Users/Dyros/ffmpeg/lib/avutil.lib
 C:/Users/Dyros/ffmpeg/lib/postproc.lib
 C:/Users/Dyros/ffmpeg/lib/swresample.lib
 C:/Users/Dyros/ffmpeg/lib/swscale.lib
+)
+
+target_link_libraries(overlay
+	${catkin_LIBRARIES}
+	C:/Users/Dyros/openvr-latest/lib/win64/openvr_api.lib
 )
