Implement complte overlay and voice command(04/27)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,17 +4,17 @@ project(VR)
 ## Compile as C++11, supported in ROS Kinetic and newer
 add_compile_options(-std=c++11)
 
-
 find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  rospy
-  sensor_msgs
-  std_msgs
-  message_generation
-  cv_bridge
-  image_transport
-  message_filters
+	roscpp
+	rospy
+	sensor_msgs
+	std_msgs
+	message_generation
+	cv_bridge
+	image_transport
+	message_filters
 )
+
 
 find_package( OpenCV REQUIRED
   NO_MODULE
@@ -84,6 +84,8 @@ add_executable(vr src/main.cpp src/render.cpp src/ricohStream.cpp src/hmdHandler
 
 add_executable(overlay src/main_rviz2.cpp src/qtoverlaycontroller.cpp src/qtoverlaycontroller.h)
 
+add_executable(camera src/usbcamera.cpp)
+
 include_directories(C:/Users/Dyros/Desktop/avatar/src/VR/include)
 include_directories(${catkin_INCLUDE_DIRS})
 target_link_libraries(vr ${catkin_LIBRARIES})
@@ -140,3 +142,5 @@ target_link_libraries(overlay ${QT_LIBRARIES})
 target_link_libraries(overlay 
 	C:/Users/Dyros/openvr-latest/lib/win64/openvr_api.lib
 )
+
+target_link_libraries(camera ${OpenCV_LIBRARIES})
