--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
   <build_depend>cv_bridge</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>message_filters</build_depend>
+  <build_depend>tocabi_msgs</build_depend>
 
 
   <build_export_depend>roscpp</build_export_depend>
@@ -24,7 +25,7 @@
   <build_export_depend>cv_bridge</build_export_depend>
   <build_export_depend>image_transport</build_export_depend>
   <build_export_depend>message_filters</build_export_depend>
-
+  <build_export_depend>tocabi_msgs</build_export_depend>
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
@@ -34,6 +35,7 @@
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>image_transport</exec_depend>
   <exec_depend>message_filters</exec_depend>
+  <exec_depend>tocabi_msgs</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
